# dgc_api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
.chart/: Chart.yaml  helm_cmd.sh  namespace-secret-simpitec.yaml  namespace-secret.yaml  values.yaml
.chart/backup/: configmap-fluentbit.yaml.bk  deployment.yaml.bk  values-api-dev.yaml.bk
.chart/templates/: NOTES.txt  _helpers.tpl  configmap-fluentbit.yaml  deployment.yaml  hpa.yaml  ingress.yaml  migrate-job.yaml  service.yaml  serviceaccount.yaml
.chart/tests/: test-connection.yaml
.deployment/cicd/: Jenkinsfile  Jenkinsfile-cardinal.backup  Jenkinsfile-dgc  environment.txt
.kaniko/: Dockerfile
.kaniko/nginx/: nginx.conf
alembic/: README  env.py
alembic/versions/: 20260613_2300_parties_policy_roles.py  (+2 more)
api/: dependencies.py  router.py
config/: database.py  email.py  jwt.py  line_notify.py  parameters.py  settings.py  storage.py
domain/: base.py
observability/: exceptions.py  logging.py  middleware.py  serialization.py
process/: generate_schedule.py  refresh_rollups.py
references/: Premium Table.xlsx
scripts/: seed_poc.py
services/: auth_service.py  issuance.py  jwt_service.py  premium_due.py  premium_servicing.py  rate_loader.py  rating.py  search.py
tests/: conftest.py  factories.py  test_age_derivation.py  test_application_quote.py  test_canonical_key.py  test_effective_date_resolution.py  test_issue_policy.py  test_loader_validation.py  test_premium_due_rollup.py  test_rating_lookup.py
(+49 files in other folders)
